--- a/galleria/themes/classic/galleria.classic.css
+++ b/galleria/themes/classic/galleria.classic.css
@@ -43,7 +43,7 @@ body{
     font-size: 3em;
     margin-left : 1em;
     color:white;
-    font-family: Ananda,sans-serif;
+    font-family: Niconne,sans-serif;
 
 }
 
