Text color to white

--- a/galleria/themes/classic/galleria.classic.css
+++ b/galleria/themes/classic/galleria.classic.css
@@ -75,7 +75,7 @@ div .buttonBox{
 
 .info{
     padding-left: 30%;
-    color:white;
+    color: #ffffff;
     text-align: center;
     font-family: sans-serif;
     margin-top : 0px;
