CSS - Style for paragraph on index.html

--- a/galleria/themes/classic/galleria.classic.css
+++ b/galleria/themes/classic/galleria.classic.css
@@ -13,6 +13,11 @@
     src: URL('fonts/Ananda.ttf') format('ttf');
   }
 
+#info p{
+  font-family: 'ananda';
+  color:white;
+}
+
 #galleria-loader{height:1px!important}
 
 body{
